--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,9 @@ body > iframe {
 .cursor-pointer {
     cursor: pointer;
 }
+#cprhliqipldavybercftg .chat-button--img-container{
+    display: none !important;
+}
 @media only screen and (max-width: 1023px) {
     html {
         background-color: #fff;
