--- a/src/features/HomePage/HomeHotDeal/homeHotDeal.css
+++ b/src/features/HomePage/HomeHotDeal/homeHotDeal.css
@@ -13,6 +13,10 @@
     overflow: hidden;
     object-fit: cover;
 }
+.home-hot__deal{
+    padding: 10px;
+    background: #fff;
+}
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .home-hot__deal {
         padding: 16px;
