[UPDATE] fix UI acc MB

--- a/src/featuresMobile/AccountPage/Components/DialogChangeInfo/dialogChangeInfo.css
+++ b/src/featuresMobile/AccountPage/Components/DialogChangeInfo/dialogChangeInfo.css
@@ -45,6 +45,7 @@
     line-height: 28px;
     border: none;
     outline: none;
+    width: 100%;
 }
 .edit-user .edit-user__info input::placeholder {
     font-size: 16px;
@@ -71,9 +72,10 @@
 }
 .edit-user .edit-user__option button:nth-child(2) {
     color: var(--red-cl);
+    margin-left: 8px;
 }
 .edit-user .edit-user__option button {
-    padding: 4px 8px;
+    padding: 4px;
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
