--- a/src/featuresMobile/Bottom/bottom.css
+++ b/src/featuresMobile/Bottom/bottom.css
@@ -37,8 +37,9 @@
     height: 20px;
   }
   .bt-cnt__item-title {
-    font-size: 12px;
-    line-height: 20px;
+    margin-top: 4px;
+    font-size: 10px;
+    line-height: 12px;
     font-weight: 500;
     color: var(--text-hover);
   }
