--- a/src/components/ModalLoad/style.css
+++ b/src/components/ModalLoad/style.css
@@ -1,4 +1,4 @@
-.modal-cnt{
+.modal-cnt {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,21 +6,40 @@
     width: 100vw;
     height: 100vh;
     z-index: 10000;
-    background-color: #00000052;
+    background-color: #ffffff4f;
     display: flex;
     justify-content: center;
+    backdrop-filter: blur(2px);
 }
-.modal-cnt__body{
+
+.modal-cnt__body {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.modal-cnt__body .text{
+
+.modal-cnt__body-img {
+    width: 94px;
+    height: 94px;
+    animation: spin 4s linear infinite
+}
+
+.modal-cnt__body .text {
     font-size: 18px;
     line-height: 28px;
     font-weight: 700;
     color: var(--purple);
     margin-top: 18px;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
