[UPDATE] check is enable momo ecommer

--- a/src/features/CategoryTree/style.css
+++ b/src/features/CategoryTree/style.css
@@ -1,134 +1,246 @@
-.cate-cnt{
+.cate-tree-cnt {
+    width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    padding: 12px 0px;
-    height: 100vh;
+    background-color: var(--white);
 }
-.cate-cnt__left{
-    width: 8.3%;
-    padding: 12px 4px;
+
+.cate-tree-cnt__left {
+    z-index: 2;
+    width: 25%;
+    height: 100%;
     overflow-y: scroll;
     background-color: var(--grey);
-    box-shadow: 0px 0px 13px -8px rgba(0,0,0,0.54);
-    height: max-content;
-    max-height: 90vh;
-    margin: auto 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    padding-bottom: 64px;
 }
-.cate-list li{
-    margin-bottom: 12px;
-    padding: 6px;
-    cursor: pointer;
-    border-radius: 8px;
+
+.cate-list__item {
+    padding: 12px 4px;
+    align-items: center;
+    border-bottom: solid 1px var(--white);
     transition: all .3s;
+    margin-right: 0px !important;
 }
+
 .cate-list__item-img {
-    width: 64px;
-    height: 64px;
+    width: 44px;
+    height: 44px;
+    border-radius: 100%;
+    object-fit: cover;
+}
+
+.cate-list__item span {
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+    margin-top: 2px;
+}
+
+.cate-tree-cnt__right {
+    width: 100%;
+    padding-left: 25vw;
+    padding-bottom: 64px;
+    min-height: 100vh;
+}
+
+.cate-tree-cnt__right-head {
+    width: 100%;
+    height: 88px;
+    border-bottom: solid 1px var(--bgGray2);
+    overflow-x: scroll;
+    /* position: fixed;
+    top: 0;
+    right: 0;
+    background-color: var(--white);
+    z-index: 2; */
+}
+
+.cate-right-list {
+    display: flex;
+    height: 100%;
+    width: max-content;
+}
+
+.cate-right-list__item {
+    align-items: center;
+    width: 78px;
+    height: 100%;
+    overflow: hidden;
+    padding: 11px 4px;
+}
+
+.cate-right-list__item-img {
+    width: 44px;
+    height: 44px;
     object-fit: cover;
     border-radius: 100%;
-    transition: all .3s;
 }
-.cate-list__item-title{
-    margin-top: 4px;
+
+.cate-right-list__item span {
     text-align: center;
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 500;
+    color: var(--text-hover);
+    margin-top: 2px;
 }
-.cate-list li:hover .cate-list__item-img{
-    transform: scale(1.05);
+
+.cate-tree-cnt__right-orgs {
+    padding: 6px 2px 12px 2px;
+    width: 100%;
+    border-bottom: solid 1px var(--bgGray2);
 }
-.cate-cnt__right{
-    background-color: var(--grey);
-    width: calc(100% - 8.3% - 12px);
-    padding: 12px;
-    overflow: hidden;
-}
-.cate-cnt__right-list{
+
+.cate-right-org-list {
+    display: flex;
     flex-wrap: wrap;
 }
 
+.cate-right-org-list .cate-org__item {
+    width: 25%;
+    padding: 4px 10px;
+}
 
-@media only screen and (max-width: 1023px) {
-    .cate-cnt {
-        padding:0px 0px 81px 0px;
-    }
+.cate-org__item-img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
 
-    .cate-cnt__left {
-        width: 20%;
-        height: 100%;
-        overflow-y: scroll;
-        background-color: var(--grey);
-        padding: 0px 0px 12px 0px;
-        margin: 0px;
-    }
+.cate-tree-cnt__right-orgs button {
+    margin: 6px 0px 0px 12px;
+    border: none;
+    outline: none;
+    background-color: var(--orange);
+    padding: 4px 8px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    color: var(--white);
+    border-radius: 6px;
+}
 
-    .cate-list li {
-        background-color: var(--grey);
-        margin:0px;
-        padding: 6px;
-        transition: all .3s;
-        border-radius: 0px;
-    }
+.cate-tree-cnt__right-body {
+    padding: 0px 12px;
+}
 
-    .cate-list__item-img {
-        width: 44px;
-        height: 44px;
-        object-fit: cover;
-        border-radius: 100%;
-    }
+.cate-tree-cnt__right-tab .MuiTabs-root {
+    position: sticky;
+    top: 0;
+    background-color: var(--white);
+    z-index: 2;
+}
 
-    .cate-list__item-title {
-        font-size: 12px;
-        line-height: 14px;
-        font-weight: 700;
-        color: var(--text-black);
-        margin-top: 2px;
-        text-align: center;
-    }
+.cate-tree-cnt__right-tab .MuiButtonBase-root {
+    padding: 4px 6px !important;
+    text-transform: none !important;
+    font-size: 16px !important;
+    font-weight: 600 !important;
+    font-family: "Nunito" !important;
+}
 
-    .cate-cnt__right {
-        width: 80%;
-        background-color: var(--bgWhite);
-        height: 100%;
-        overflow-y: scroll;
-        padding: 0px;
-    }
+.cate-tree-cnt__right-tab .Mui-selected {
+    color: var(--purple) !important;
+}
 
-    .cate-cnt__right-head {
-        width: 100%;
-        height: 72px;
-        overflow-x: scroll;
-        border-bottom: solid 1px var(--grey_2);
-        padding-left: 6px;
-    }
-    .cate-cnt__right-list{
-        flex-wrap: nowrap;
-        width: max-content;
-    }
-    .cate-cnt__right-list li{
-        padding: 8px;
-    }
-    .cate-cnt__right-list-item img{
-        width: 44px;
-        height: 44px;
-        border-radius: 100%;
-        object-fit: cover;
-    }
-    .cate-cnt__right-list-item span{
-        font-size: 10px;
-        line-height: 12px;
-        font-weight: 500;
-    }
-    .cate-cnt__right-org{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-    .cate-cnt__right-org li{
-        width: 25%;
-        padding: 4px 10px;
-    }
-    .cate-cnt__right-org li img{
-        border-radius: 8px;
-        border: solid 1px var(--grey);
-    }
+.cate-tree-cnt__right-tab .MuiTabs-indicator {
+    background-color: var(--purple) !important;
+}
+
+.cate-tree-cnt__right-tab .MuiTabPanel-root {
+    padding: 4px 0px !important;
+}
+
+.cate-services__list li {
+    padding: 12px 0px;
+    border-bottom: solid 1px var(--bgGray2);
+}
+
+.cate-services__list-item .item-img {
+    width: 72px;
+    height: 72px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.cate-services__list-item .item-detail {
+    width: calc(100% - 72px);
+    height: 72px;
+    padding-left: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.cate-services__list-item .item-name {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: var(--black2);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+}
+
+.cate-services__list-item .item-price span:nth-child(1) {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    color: var(--red);
+}
+
+.cate-services__list-item .item-price span:nth-child(2) {
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 600;
+    color: var(--grey);
+    margin-left: 4px;
+    text-decoration: line-through;
+}
+
+.home-tree__pr-cate-child {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.home-tree__pr-cate-child li {
+    width: 33.33%;
+    background-color: var(--white);
+    padding: 10px 4px;
+}
+
+.home-tree__pr-cate-child__item {
+    width: 100%;
+    align-items: unset;
+}
+
+.home-tree__pr-cate-child__item .item-img__box {
+    position: relative;
+    padding-bottom: 100%;
+}
+
+.home-tree__pr-cate-child__item .item-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    border-radius: 8px;
+}
+
+.home-tree__pr-cate-child__item .item-name {
+    margin-top: 4px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 600;
+    color: var(--black2);
 }
