--- a/src/features/Reels/style.css
+++ b/src/features/Reels/style.css
@@ -1,10 +1,17 @@
 .video__list{
     position: relative;
-    width: 100vw;
-    height: 100vh;
-    overflow: scroll;
-    -ms-scroll-snap-type: y mandatory;
-    scroll-snap-type: y mandatory;
+    width: 100%;
+    height: 100%;
+    /* overflow: scroll; */
+    /* -ms-scroll-snap-type: y mandatory; */
+    /* scroll-snap-type: y mandatory; */
+}
+.reel .slick-slide{
+    border: none;
+    border-radius: 0;
+}
+.reel .css-1160xiw-MuiPaper-root-MuiDrawer-paper{
+    border-radius: 0;
 }
 .trend-item-ctn{
     position: relative;
