--- a/src/features/ViewItemCommon/ServicePromoItem/service-promo-item.css
+++ b/src/features/ViewItemCommon/ServicePromoItem/service-promo-item.css
@@ -7,7 +7,7 @@
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    border: 1px solid transparent;
+    /* border: 1px solid transparent; */
     height: 100%;
     flex: 1;
 }
