--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -869,6 +869,8 @@
 
 .MuiContainer-root .org-container .MuiTabs-indicator {
     background-color: var(--purple) !important;
+    width: 32px !important;
+    margin-left: calc(1% + 4px) !important;
 }
 .org-container .MuiTabPanel-root {
     padding: 0;
