--- a/src/features/HomeResults/HomeDiscountList/style.css
+++ b/src/features/HomeResults/HomeDiscountList/style.css
@@ -22,7 +22,8 @@
 
 @media only screen and (max-width: 767px) {
     .discount-list-cnt {
-        padding: 20px 14px;
+        padding: 20px 12px;
+        margin-top: 48px;
     }
 
     .discounts__list .item-cnt {
