--- a/src/features/HomeResults/home-result.css
+++ b/src/features/HomeResults/home-result.css
@@ -49,6 +49,7 @@
 @media only screen and (max-width: 1023px) {
     .home-promo-ser__mb {
         width: 100%;
+        margin-top: 48px;
     }
     .filter-btn{
         border: none;
@@ -64,8 +65,9 @@
     } */
     .home-result__cus {
         display: grid !important;
-        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-columns: repeat(1, 1fr) !important;
         gap: 16px !important;
+        padding: 0px 12px !important;
     }
     .ser-item__cus {
         width: 100% !important;
