--- a/src/features/Homev2/home-se.css
+++ b/src/features/Homev2/home-se.css
@@ -1,14 +1,17 @@
 .home-se-cnt {
     margin: 28px 0px;
 }
+
 .ser-promo__bot {
     position: absolute;
     bottom: 8px;
     left: 8px;
 }
+
 .org-img-cnt__rate-item {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
+
 .home-se-sec-title {
     background-color: var(--red-cl);
     width: fit-content;
@@ -21,6 +24,7 @@
     /* margin-bottom: 12px; */
     position: relative;
 }
+
 .home-se-sec-title::after {
     position: absolute;
     content: "";
@@ -33,6 +37,7 @@
     top: 0;
     margin: 7px 0px 0px 17px;
 }
+
 /* home tags */
 
 .home-tags-list {
@@ -41,10 +46,12 @@
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
 .home-tags-list li {
     width: calc(100% / 6);
     padding: 8px 16px;
 }
+
 .home-tags .tag-item-cnt {
     background-color: var(--bgWhite);
     cursor: pointer;
@@ -53,24 +60,29 @@
     border-radius: 12px;
     /* box-shadow: 0px 6px 15px #dcd8ee; */
 }
+
 .home-tags .tag-item-cnt:hover {
     box-shadow: 0px 10px 31px rgba(76, 62, 142, 0.3);
 }
+
 .home-tags .tag-item-cnt img {
     width: 64px;
     height: 64px;
     margin-bottom: 16px;
 }
+
 .home-tags .tag-item-cnt span {
     font-size: 16px;
     line-height: 20px;
     font-weight: 700;
     color: var(--text-black);
 }
+
 /* home promo */
 .home-se-promo {
     margin: 16px 0px 24px 0;
 }
+
 .home-promo-ser .ser-list {
     width: 100%;
     display: grid;
@@ -78,15 +90,18 @@
     gap: 16px;
     margin: 24px 0 24px 0;
 }
+
 .home-promo-ser .ser-list li {
     background-color: var(--bgWhite);
 }
+
 .home-se-promo__header button {
     background-color: var(--bgWhite);
     outline: none;
     padding: 4px;
     border-radius: 100%;
 }
+
 /* home deal */
 .home-deal-cnt {
     display: flex;
@@ -94,18 +109,21 @@
     justify-content: space-between;
     gap: 0 16px;
 }
+
 .deal-first {
     width: 50%;
     cursor: pointer;
     overflow: hidden;
     border-radius: 12px;
 }
+
 .deal-first img,
 .home-deal-cnt .deal-second__item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .deal-second {
     display: flex;
     justify-content: space-between;
@@ -113,9 +131,11 @@
     cursor: pointer;
     gap: 0 16px;
 }
+
 .home-deal-cnt .deal-second__item {
     width: 50%;
 }
+
 /* home card */
 .home-card-cnt {
     margin: 48px 0px;
@@ -123,10 +143,12 @@
     display: flex;
     gap: 0 16px;
 }
+
 .home-card-cnt__left {
     width: calc(25% - 16px);
     height: 100%;
 }
+
 .home-card-cnt__left .card-list {
     width: 100%;
     height: 100%;
@@ -134,6 +156,7 @@
     flex-direction: column;
     gap: 16px 0;
 }
+
 .home-card-cnt__left .card-list li {
     width: 100%;
     background-color: var(--bgWhite);
@@ -143,30 +166,36 @@
     border: solid 1px var(--bgGray);
     transition: all 0.3s;
 }
+
 .home-card-cnt__left .card-list li:hover {
     background-color: rgba(227, 227, 227, 0.796);
 }
+
 .home-card-cnt__left .card-item-cnt img {
     margin-right: 12px;
     width: 20px;
 }
+
 .home-card-cnt__left .card-item-cnt span {
     font-size: 14px;
     line-height: 20px;
     font-weight: bold;
     color: var(--text-black);
 }
+
 .home-card-cnt__left .card-list li button {
     border: solid 1px var(--text-hover);
     outline: none;
     border-radius: 100%;
     background-color: var(--bgWhite);
 }
+
 .home-card-cnt__right {
     width: calc(75% + 16px);
     border: solid 1px var(--bgGray);
     border-radius: 12px;
 }
+
 .home-card-list-org .org-list {
     width: 100%;
     display: grid;
@@ -180,6 +209,7 @@
     margin: 42px 0px;
     padding: 32px 0px;
 }
+
 .home-province_list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -187,6 +217,7 @@
     gap: 16px;
     margin-top: 24px;
 }
+
 .home-province .home-province_item {
     overflow: hidden;
     border-radius: 12px;
@@ -194,12 +225,15 @@
     position: relative;
     transition: all 0.3s;
 }
+
 .home-province .home-province_item:hover {
     box-shadow: 0px 10px 31px rgba(76, 62, 142, 0.3);
 }
+
 .home-province .home-province_item:hover img {
     transform: scale(1.1);
 }
+
 .home-province .province-item-cnt {
     position: absolute;
     bottom: 10px;
@@ -210,39 +244,47 @@
     background-color: var(--bgWhite);
     border-radius: 8px;
 }
+
 .home-province .province-item-cnt span:nth-child(1) {
     font-size: 14px;
     line-height: 18px;
     color: var(--red-cl);
     font-weight: bold;
 }
+
 .home-province .province-item-cnt span:nth-child(2) {
     font-size: 16px;
     line-height: 20px;
     color: var(--text-black);
     font-weight: 700;
 }
+
 .home-province .home-province_item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     transition: all 0.36s ease-in-out;
 }
+
 .home-province .home-province_item:nth-child(1) {
     grid-column: 1/3;
     grid-row: 1/2;
 }
+
 .home-province .home-province_item:nth-child(2),
 .home-province .home-province_item:nth-child(3) {
     grid-row: 1/3;
 }
+
 .home-province .home-province_item:nth-child(4),
 .home-province .home-province_item:nth-child(5) {
     grid-row: 2/4;
 }
+
 .home-province .home-province_item:nth-child(6) {
     grid-column: 3/5;
 }
+
 /* home services recommend */
 .home-se-re {
     margin: 42px 0px;
@@ -257,18 +299,22 @@
     .home-result-ser-cnt {
         padding: 0 24px !important;
     }
+
     .filter-ser-list li {
         flex-shrink: 0;
     }
+
     .home-result__cus {
         padding: 0 24px;
     }
+
     .product .product-cnt {
         flex-direction: row;
         padding: 24px;
         gap: 0 24px;
     }
 }
+
 /* Mobile */
 @media only screen and (max-width: 767px) {
     .home-promo-ser .ser-list {
@@ -278,23 +324,29 @@
         margin: 0;
         padding: 12px 0 0 12px;
     }
+
     .home-se-promo .home-promo-ser .ser-list {
         display: flex;
         padding: 0 12px 0 12px;
     }
+
     .home-cate-tree-cnt {
         display: none;
     }
+
     .home-se-promo__header {
         width: 100%;
         padding: 0 12px;
     }
+
     .home-title__tag {
         display: none;
     }
+
     .home-ca-cnt {
         display: none;
     }
+
     .home-province {
         margin: 0;
         padding: 16px 0;
@@ -303,14 +355,17 @@
     .home-card-cnt {
         margin: unset;
     }
+
     .home-card-cnt__left .card-list li {
         margin-bottom: unset;
         box-shadow: rgb(0 0 0 / 24%) 0px 15px 20px -16px;
     }
+
     .home-se-cnt {
         margin-top: 0;
         margin-bottom: 84px;
     }
+
     .home-se-sec-title {
         margin-bottom: 0px;
         padding: 6px 18px;
@@ -318,31 +373,44 @@
         font-size: 14px;
         line-height: 18px;
     }
+
     .home-se-sec-title::after {
         height: 25px;
         margin: 5px 0px 0px 17px;
     }
+
     .home-tags {
         width: 100%;
         overflow-x: scroll;
     }
+
     .home-tags-list {
         width: max-content;
         padding: 16px 0 0;
     }
+
     .home-tags-list li {
         padding: 6px;
     }
+
     .home-tags .tag-item-cnt {
         box-shadow: none;
-        background-color: var(--bg-color);
+        padding: 4px 12x;
     }
+
+    .home-tags .tag-item-cnt img {
+        width: 44px;
+        height: 44px;
+        margin-bottom: 8px;
+    }
+
     .home-tags .tag-item-cnt span {
-        font-size: 14px;
-        line-height: 16px;
+        font-size: 12px;
+        line-height: 18px;
         font-weight: 600;
         text-align: center;
     }
+
     .home-se-promo {
         margin: 0px;
         padding-top: 16px;
@@ -352,46 +420,57 @@
         width: 16px;
         height: 16px;
     }
+
     .home-se-promo__header p {
         font-size: 14px;
     }
+
     .home-se-re {
         margin: 16px 0;
     }
+
     .home-promo-ser .ser-list li {
         /* width: 164px; */
         flex-shrink: 0;
     }
+
     .home-deal-cnt {
         flex-direction: column;
         padding: 16px;
         gap: 16px 0;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
+
     .deal-first {
         width: 100%;
     }
+
     .deal-second {
         width: 100%;
         gap: 0 16px;
         display: flex;
     }
+
     .home-card-cnt {
         flex-direction: column;
     }
+
     .home-card-cnt__left {
         width: 100%;
         padding: 16px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
+
     .home-card-cnt__right {
         width: 100%;
         padding: unset;
     }
+
     .home-card-list-org {
         width: 100%;
         overflow-x: scroll;
     }
+
     .home-card-list-org .org-list {
         flex-wrap: nowrap;
         width: max-content;
@@ -399,14 +478,17 @@
         display: flex;
         padding: 16px;
     }
+
     .home-card-list-org .org-list li {
         width: 164px;
         padding: unset;
     }
+
     .re-org-item .re-org-item__img {
         /* height: 164px; */
         flex-shrink: 0;
     }
+
     .home-province_list {
         margin-top: 16px;
         padding: 0 12px;
@@ -416,64 +498,76 @@
         grid-template-columns: 1fr 1fr;
         height: 100%;
     }
+
     .home-province .home-province_item {
         border-radius: 8px;
     }
+
     .home-province .home-province_item:nth-child(1) {
         grid-row-start: 1;
         grid-column-start: 1;
         grid-row-end: 3;
         grid-column-end: 2;
     }
+
     .home-province .home-province_item:nth-child(2) {
         grid-row-start: 2;
         grid-column-start: 2;
         grid-row-end: 3;
         grid-column-end: 3;
     }
+
     .home-province .home-province_item:nth-child(3) {
         grid-row-start: 1;
         grid-column-start: 2;
         grid-row-end: 2;
         grid-column-end: 3;
     }
+
     .home-province .home-province_item:nth-child(4) {
         grid-row-start: 3;
         grid-column-start: 2;
         grid-row-end: 5;
         grid-column-end: 3;
     }
+
     .home-province .home-province_item:nth-child(5) {
         grid-row-start: 3;
         grid-column-start: 1;
         grid-row-end: 4;
         grid-column-end: 2;
     }
+
     .home-province .home-province_item:nth-child(6) {
         grid-row-start: 4;
         grid-column-start: 1;
         grid-row-end: 5;
         grid-column-end: 2;
     }
+
     .home-province .province-item-cnt {
         width: 100%;
         margin: 0px;
         padding: 4px;
         background-color: transparent;
     }
+
     .home-province .province-item-cnt span:nth-child(1) {
         color: var(--bgWhite);
         font-weight: 700;
     }
+
     .home-province .province-item-cnt span:nth-child(2) {
         font-size: 14px;
         color: var(--bgWhite);
     }
+
     .card-list {
         gap: 16px 0;
         display: flex;
         flex-direction: column;
     }
+
     .ser-promo__bot {
         position: absolute;
         bottom: 8px;
