--- a/src/features/HomePage/HomeFavorite/homeFavorite.css
+++ b/src/features/HomePage/HomeFavorite/homeFavorite.css
@@ -22,15 +22,15 @@
 @media screen and (max-width: 767.98px) {
     .home-favorite {
         margin: 0;
-        padding: 12px 0 12px 12px;
+        padding: 12px 0;
     }
     .home-favorite .home-title__seemore {
-        padding-right: 12px;
+        /* padding-right: 12px; */
     }
     .home-favorite .home-favorite__list {
         display: flex;
         overflow-y: scroll;
-        padding: 16px 0 0;
+        padding: 16px 0 0 12px;
         grid-gap: 12px;
     }
     .home-favorite .home-favorite__item {
