--- a/src/features/HomePage/HomeHotDeal/homeHotDeal.css
+++ b/src/features/HomePage/HomeHotDeal/homeHotDeal.css
@@ -37,10 +37,14 @@
 
 @media only screen and (max-width: 767px) {
     .home-hot__deal {
-        padding: 0px 0 12px 12px;
+        padding: 0;
+        padding-bottom: 12px;
+    }
+    .home-title{
+        padding: 0 12px
     }
     .home-hot__deal .home-title__seemore {
-        padding-right: 12px;
+        /* padding-right: 12px; */
     }
     .home-hot__deal .dealHot-listBanner {
         margin-top: 16px;
