--- a/src/features/HomePage/HomeTopService/homeTopService.css
+++ b/src/features/HomePage/HomeTopService/homeTopService.css
@@ -23,7 +23,8 @@
 @media only screen and (max-width: 767px) {
     .home-top__service {
         margin-top: 0;
-        padding: 0 0 12px 12px;
+        padding: 0;
+        padding-bottom: 12px;
     }
     .home-top__service .home-title__seemore {
         padding-right: 12px;
@@ -31,7 +32,7 @@
     .home-top__service .top-service__list {
         display: flex;
         grid-gap: 12px;
-        padding: 18px 12px 0px 0;
+        padding: 18px 0px 0px 15px;
         overflow-x: scroll;
         width: 100%;
     }
