--- a/src/components/AssistantBtn/style.css
+++ b/src/components/AssistantBtn/style.css
@@ -55,7 +55,7 @@
     height: 70px;
     bottom: 30px;
     right: 30px;
-    z-index: 50px;
+    z-index: 1000 !important;
 }
 
 .assistantBtn-wrap-hover:hover {
