[UPDATE] search back result

--- a/src/features/OrderDetail/orderDetail.css
+++ b/src/features/OrderDetail/orderDetail.css
@@ -6,23 +6,28 @@
   border-radius: 24px;
   overflow: hidden;
 }
+
 .MuiDialog-paper {
   max-height: unset !important;
   max-width: unset !important;
 }
+
 .order-de__head {
   padding-bottom: 12px;
   border-bottom: solid 1px var(--purple);
 }
+
 .order-de__head-title {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
   color: var(--purple);
 }
+
 .order-de__head-title img {
   display: none;
 }
+
 .order-de__head-date .date,
 .order-de__head-date .time {
   font-weight: 700;
@@ -30,11 +35,13 @@
   line-height: 20px;
   color: var(--text-hover);
 }
+
 .order-de__head-date .date h4,
 .order-de__head-date .time h4 {
   color: var(--purple);
   margin: 0px 8px 0px 4px;
 }
+
 .order-de__org {
   margin-top: 12px;
   padding: 12px;
@@ -42,22 +49,26 @@
   width: 100%;
   box-shadow: 0px 6px 15px #dcd8ee;
 }
+
 .order-de__org-img {
   width: 96px;
   height: 96px;
   border-radius: 100%;
   object-fit: cover;
 }
+
 .order-de__org-cnt {
   padding-left: 12px;
   display: flex;
   flex-direction: column;
 }
+
 .order-de__org-cnt .name {
   font-size: 18px;
   font-weight: 700;
   color: var(--purple);
 }
+
 .order-de__org-cnt .address {
   font-size: 16px;
   line-height: 20px;
@@ -65,16 +76,20 @@
   color: var(--text-black);
   margin: 4px 0px;
 }
+
 .order-de__count {
   padding: 6px 0px;
   border-bottom: solid 1px var(--bgGray);
 }
+
 .order-de-tab {
   margin: 8px 0px;
 }
+
 .order-de-tab__btn {
   margin-top: 8px;
 }
+
 .order-de-tab__btn button {
   margin-right: 12px;
   border: solid 1px var(--purple);
@@ -88,17 +103,34 @@
   border-radius: 14px;
   transition: all 0.3s;
 }
+
 .order-list-item__wrap {
   height: 52vh;
   overflow-y: scroll;
 }
+
 .order-item-list li {
   margin: 24px 0px;
 }
+
 .order-de-list__item {
   display: flex;
   flex-direction: row;
+  position: relative;
 }
+
+.order-de-list__item-discount {
+  position: absolute;
+  background-color: var(--orange);
+  padding: 2px 4px;
+  color: var(--white);
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 600;
+  border-radius: 6px;
+  margin: -9px 0px 0px 0px;
+}
+
 .order-item-list li:not(:last-child) {
   border-bottom: 1px solid var(--text-hover);
   padding: 0 0 28px 0;
@@ -110,6 +142,7 @@
   border-radius: 12px;
   object-fit: cover;
 }
+
 .order-de-pr-item__cnt {
   padding-left: 24px;
   width: calc(100% - 234px);
@@ -118,16 +151,19 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
 .order-de-pr-item__cnt .item-detail {
   display: flex;
   flex-direction: column;
 }
+
 .order-de-pr-item__cnt .item-detail .item-name {
   font-weight: bold;
   font-size: 20px;
   line-height: 24px;
   color: var(--text-black);
 }
+
 .order-de-pr-item__cnt .item-detail .item-org__name {
   font-weight: 500;
   font-size: 14px;
@@ -135,94 +171,117 @@
   color: var(--purple);
   margin-top: 4px;
 }
+
 .order-de-pr-item__cnt .item-bottom .price {
   font-weight: bold;
   font-size: 20px;
   line-height: 24px;
   color: var(--purple);
 }
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
-  .order-de {
-    width: 600px;
-    min-height: unset;
-    margin: 0 auto;
-    border-radius: 24px;
-  }
-  .order-de .item-name,
-  .order-de .item-org__name {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    word-break: break-word;
-  }
-  .order-de .item-bottom {
-    flex-direction: column;
-    gap: 10px 0;
-    align-items: flex-start;
-  }
+
+.order-de-pr-item__cnt .item-bottom .old-price {
+  margin-left: 6px;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 600;
+  color: var(--text-hover);
+  text-decoration: line-through;
 }
+
+.order-de-pr-item__cnt .item-bottom button {
+  background-color: var(--purple);
+  border-radius: 8px;
+  color: var(--white);
+}
+
+.order-de-pr-item__cnt .item-bottom button:nth-child(2) {
+  margin-left: 8px;
+  background-color: var(--orange);
+}
+
 /* res-mobile */
 /* Mobile */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1023px) {
   .order-de {
+    margin-top: 48px;
     width: 100%;
     height: 100vh;
     overflow-y: scroll;
     border-radius: 0;
     padding: 12px;
   }
+
   .order-de__head {
     flex-direction: column;
     align-items: flex-start;
     padding-bottom: 6px;
   }
+
   .order-de__head-title {
-    font-size: 18px;
-    line-height: 20px;
+    display: none;
   }
+
   .order-de__head-title img {
     display: block;
     margin-right: 8px;
   }
+
   .order-de__head-date {
     justify-content: space-between;
   }
+
   .order-de-list__item {
     padding: 8px;
     border-radius: 8px;
     position: relative;
+    border: solid 1px var(--grey);
   }
+
   .order-de__org {
-    border-radius: 12px;
+    border-radius: 8px;
+    box-shadow: none;
+    padding: 8px;
+    border: solid 1px var(--grey);
   }
+
   .order-de__org-img {
     width: 64px;
     height: 64px;
     border-radius: 8px;
   }
+
   .order-de__org-cnt .name {
     font-size: 14px;
   }
+
   .order-de__org-cnt .address {
     font-size: 12px;
     line-height: 14px;
   }
+
+  .order-item-list li {
+    margin: 6px 0px;
+    padding: 0px !important;
+    border-bottom: none !important;
+  }
+
   .order-de-pr-item__img {
     width: 64px;
     height: 64px;
     border-radius: 8px;
   }
+
   .order-de-pr-item__cnt {
     width: calc(100% - 64px);
     padding-left: 8px;
     height: 102px;
   }
+
   .order-de-pr-item__cnt .item-detail .item-name {
     font-size: 12px;
     line-height: 12px;
   }
+
   .item-bottom {
     position: absolute;
     width: 100%;
@@ -230,11 +289,28 @@
     bottom: 8px;
     padding: 0px 8px;
   }
+
   .order-de-pr-item__cnt .item-bottom .price {
     font-size: 16px;
     line-height: 20px;
   }
+
   .order-list-item__wrap {
     height: max-content;
+  }
+
+  .order-de-pr-item__cnt .item-bottom button {
+    padding: 4px 16px;
+  }
+
+  .order-de-pr-item__cnt .item-bottom .old-price {
+    font-size: 14px;
+  }
+
+  .order-de-list__item-discount {
+    font-size: 10px;
+    line-height: 12px;
+    border-radius: 4px;
+    margin: -15px 0px 0px -8px;
   }
 }
