--- a/src/features/Search/style.css
+++ b/src/features/Search/style.css
@@ -222,6 +222,26 @@
     font-weight: bold;
     color: var(--purple);
 }
+.search-null{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.search-null img {
+    width: 290px;
+}
+.search-null .title{
+    text-align: center;
+    margin-top: 8px;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 600;
+    color: var(--text-hover);
+}
+.search-null .title span{
+    color: var(--orange);
+    font-weight: 700;
+}
 @media only screen and (max-width: 1023px) {
     .search-cnt {
         padding: 9px 12px;
