--- a/src/index.css
+++ b/src/index.css
@@ -153,9 +153,9 @@ nav,
 section {
     display: block;
 }
-.MuiModal-root {
+/* .MuiModal-root {
     backdrop-filter: blur(10px) !important;
-}
+} */
 body > iframe {
     position: unset !important;
 }
