[UPDATE] create component Map

--- a/src/features/HomePage/HomeRecomment/homeRecomment.css
+++ b/src/features/HomePage/HomeRecomment/homeRecomment.css
@@ -21,11 +21,12 @@
 }
 @media screen and (max-width: 767px) {
     .home-recomment {
-        margin: 16px 12px 12px;
+        margin: 12px 0;
+        padding: 0 0 100px 0;
     }
     .home-recomment__list {
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 12px;
-        margin: 18px 0 96px 0;
+        margin: 24px 12px;
     }
 }
