--- a/src/components/BackTopButton/style.css
+++ b/src/components/BackTopButton/style.css
@@ -1,30 +1,33 @@
 .back-top-btn {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    bottom: 48px;
+    right: 24px;
     z-index: 5;
     background-color: var(--orange);
-    margin: 0px 54px 54px 0px;
-    padding: 6px;
+    width: 40px;
+    height: 40px;
     border-radius: 100%;
     cursor: pointer;
-    transition: all .5s;
+    transition: all 0.5s;
     visibility: hidden;
     margin-bottom: 38px;
     opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .back-top-btn__act {
     visibility: visible;
-    margin-bottom: 54px;
-    transition: all .5s;
+    margin-bottom: 32px;
+    transition: all 0.5s;
     opacity: 1;
 }
 
 @media only screen and (max-width: 1023px) {
     .back-top-btn {
-        margin: 0px 14px 20px 0px;
-        margin-bottom: 12px;
+        right: 12px;
+        bottom: 12px;
     }
 
     .back-top-btn__act {
