--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -1,8 +1,9 @@
-.maptags {
+.map {
     width: 100vw;
     height: 100vh;
     position: relative;
 }
+
 .open-map {
     padding: 8px 16px;
     background-color: var(--purple);
@@ -14,11 +15,11 @@
     color: #fff;
     font-weight: bold;
 }
-.maptags .map-content {
+.map .map-content {
     width: 100%;
     height: 100%;
 }
-.maptags .dialog-map__close {
+.map .dialog-map__close {
     position: absolute;
     top: 14px;
     right: 60px;
@@ -29,18 +30,18 @@
     box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
     cursor: pointer;
 }
-.maptags .dialog-map__close-img {
+.map .dialog-map__close-img {
     width: 30px;
     height: 30px;
 }
 
-.maptags .dialog-map__close img {
+.map .dialog-map__close img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.maptags .dialog-map__list {
+.map .dialog-map__list {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -51,11 +52,11 @@
     border-right: 1px solid #ccc;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
-.maptags .dialog-map__list::-webkit-scrollbar {
+.map .dialog-map__list::-webkit-scrollbar {
     width: 2px;
     display: block;
 }
-.maptags .dialog-map__list::-webkit-scrollbar-thumb {
+.map .dialog-map__list::-webkit-scrollbar-thumb {
     background-color: darkgrey;
 }
 
@@ -63,7 +64,7 @@
     margin-left: 0 !important;
     transition: all 0.1s linear;
 }
-.maptags .dialog-map__item {
+.map .dialog-map__item {
     display: flex;
     background-color: var(--bgWhite);
     flex-shrink: 0;
@@ -75,21 +76,21 @@
     transition: all 0.1s ease-out;
     user-select: none;
 }
-.maptags .dialog-map__item:hover {
+.map .dialog-map__item:hover {
     background-color: var(--bgGray) !important;
     transition: all 0.2s ease-out;
 }
-.maptags .dialog-map__item:not(:last-child) {
+.map .dialog-map__item:not(:last-child) {
     border-bottom: 1px solid rgba(204, 204, 204, 0.539);
 }
-.maptags .map-item__img {
+.map .map-item__img {
     width: 80px;
     height: 80px;
     border-radius: 8px;
     overflow: hidden;
     flex-shrink: 0;
 }
-.maptags .map-item__img img {
+.map .map-item__img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -97,7 +98,7 @@
 /* .dialog-map__org .map-item__content {
     padding: 16px;
 } */
-.maptags .map-item__name p {
+.map .map-item__name p {
     font-size: 16px;
     font-weight: bold;
     line-height: 24px;
@@ -108,7 +109,7 @@
     text-overflow: ellipsis;
     word-break: break-word;
 }
-.maptags .map-item__address p {
+.map .map-item__address p {
     font-size: 14px;
     font-weight: bold;
     line-height: 24px;
@@ -121,12 +122,12 @@
     text-overflow: ellipsis;
     word-break: break-word;
 }
-.maptags .map-item__evaluate {
+.map .map-item__evaluate {
     display: flex;
     grid-gap: 0 16px;
 }
 
-.maptags .evaluate-item {
+.map .evaluate-item {
     display: flex;
     grid-gap: 0 4px;
     align-items: center;
@@ -139,11 +140,11 @@
     flex: 1;
     height: 100%;
 }
-.maptags .evaluate-item img {
+.map .evaluate-item img {
     width: 14px;
     height: 14px;
 }
-.maptags .evaluate-item p {
+.map .evaluate-item p {
     font-size: 14px;
     font-weight: bold;
 }
@@ -157,7 +158,7 @@
     margin-left: -25%;
     transition: all 0.3s ease-in !important;
 }
-.maptags .open-list__org {
+.map .open-list__org {
     z-index: 6;
     position: absolute;
     padding: 16px 8px;
@@ -169,11 +170,11 @@
     cursor: pointer;
     border-radius: 0 8px 8px 0;
 }
-.maptags .open-list__org.open {
+.map .open-list__org.open {
     left: 0;
     z-index: 6;
 }
-.maptags .open-list__org.close {
+.map .open-list__org.close {
     z-index: 6;
     right: -23px;
 }
@@ -210,9 +211,10 @@
 .gm-ui-hover-effect {
     display: none !important;
 }
-.maptags .map-item__mobile {
+.map .map-item__mobile {
     display: none;
 }
+
 @media only screen and (max-width: 1023px) {
     .open-map {
         padding: 6px 14px;
@@ -220,30 +222,30 @@
     .open-map p {
         font-size: 14px;
     }
-    .maptags .evaluate-item p {
+    .map .evaluate-item p {
         font-size: 12px;
     }
-    .maptags {
+    .map {
         width: 100vw;
         height: 100vh;
     }
-    .maptags .dialog-map__wrapper {
+    .map .dialog-map__wrapper {
         display: none;
     }
-    .maptags .open-list__org {
+    .map .open-list__org {
         display: none;
     }
-    .maptags .map-cnt {
+    .map .map-cnt {
         border-radius: unset;
     }
-    .maptags .map-list__mobile {
+    .map .map-list__mobile {
         width: 100%;
         z-index: 2;
         position: absolute;
         bottom: 0;
         left: 0;
     }
-    .maptags .map-item__mobile {
+    .map .map-item__mobile {
         width: 100%;
         background-color: var(--bgWhite);
         display: flex;
@@ -254,16 +256,16 @@
         border-radius: 12px;
         align-items: center;
     }
-    .maptags .map-item__mobile .item-img {
+    .map .map-item__mobile .item-img {
         width: 136px;
         height: 136px;
         padding: 12px;
         flex-shrink: 0;
     }
-    .maptags .map-list__mobile .map-item__wrap {
+    .map .map-list__mobile .map-item__wrap {
         padding: 16px 6px;
     }
-    .maptags .map-item__mobile .item-img img {
+    .map .map-item__mobile .item-img img {
         border-radius: 12px;
         overflow: hidden;
         width: 100%;
@@ -271,13 +273,13 @@
         object-fit: cover;
         box-shadow: 0 8px 24px rgb(149 157 165 / 20%);
     }
-    .maptags .map-item__mobile .item-content {
+    .map .map-item__mobile .item-content {
         padding: 12px 12px 12px 0;
         display: flex;
         flex-direction: column;
         gap: 4px 0;
     }
-    .maptags .map-item__mobile .item-content__name {
+    .map .map-item__mobile .item-content__name {
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
@@ -285,11 +287,11 @@
         text-overflow: ellipsis;
         word-break: break-word;
     }
-    .maptags .map-item__mobile .item-content__name p {
+    .map .map-item__mobile .item-content__name p {
         font-size: 14px;
         font-weight: bold;
     }
-    .maptags .map-list__mobile .item-content__address {
+    .map .map-list__mobile .item-content__address {
         display: -webkit-box;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
@@ -297,34 +299,34 @@
         text-overflow: ellipsis;
         word-break: break-word;
     }
-    .maptags .map-list__mobile .item-content__address p {
+    .map .map-list__mobile .item-content__address p {
         font-size: 12px;
         font-weight: bold;
         color: #8c8c8c;
     }
-    .maptags .map-list__mobile .item-content__evaluate {
+    .map .map-list__mobile .item-content__evaluate {
         display: flex;
         grid-gap: 0 8px;
     }
-    .maptags .map-list__mobile .item-content__evaluate .evaluate-item {
+    .map .map-list__mobile .item-content__evaluate .evaluate-item {
         display: flex;
         grid-gap: 0 4px;
     }
-    .maptags .map-list__mobile .evaluate-item__img {
+    .map .map-list__mobile .evaluate-item__img {
         width: 16px;
         height: 16px;
     }
-    .maptags .map-list__mobile .evaluate-item__img img {
+    .map .map-list__mobile .evaluate-item__img img {
         width: 100%;
         height: 100%;
     }
-    .maptags .gm-fullscreen-control {
+    .map .gm-fullscreen-control {
         display: none;
     }
-    .maptags .gmnoprint {
+    .map .gmnoprint {
         display: none;
     }
-    .maptags .dialog-map__close {
+    .map .dialog-map__close {
         right: 16px;
     }
 }
