--- a/src/featuresMobile/AccountPage/accountPage.css
+++ b/src/featuresMobile/AccountPage/accountPage.css
@@ -153,7 +153,7 @@
 
 /* account bot */
 .accountMobile-bot {
-    background-color: #fff;
+    /* background-color: #fff; */
     margin: 12px;
 }
 
