--- a/src/components/AssistantBtn/style.css
+++ b/src/components/AssistantBtn/style.css
@@ -8,8 +8,11 @@
     left: 0;
     right: 0;
     bottom: 0;
+    transition: all 0.2s linear;
 }
-
+.assistantBtn {
+    transition: all 0.2s linear;
+}
 #floating-button {
     width: 40px;
     height: 40px;
